unpackaged/main/default/objects/Contact/fields/ROE_Status__c.field-meta.xml
<CustomField>
    <fullName>ROE_Status__c</fullName>
    <label>ROE Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In ROE</fullName>
            </value>
            <value>
                <fullName>Out of ROE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>