unpackaged/main/default/objects/Contact/fields/Send_notification_Re_engage__c.field-meta.xml
<CustomField>
    <fullName>Send_notification_Re_engage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send notification-Re engage</label>
    <type>Checkbox</type>
</CustomField>