unpackaged/main/default/objects/Contact/fields/Send_NPS_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_NPS_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send NPS Survey</label>
    <type>Checkbox</type>
</CustomField>