unpackaged/main/default/objects/Contact/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>IDX</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>PFT - Design</fullName>
            </value>
            <value>
                <fullName>PFT - Launch</fullName>
            </value>
            <value>
                <fullName>PFT - Migration</fullName>
            </value>
            <value>
                <fullName>PFT - Revisions</fullName>
            </value>
            <value>
                <fullName>PFT - Website Execution</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Account Manager Assistant</fullName>
            </value>
            <value>
                <fullName>Business Analytics</fullName>
            </value>
            <value>
                <fullName>Content Team</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>CS PH Support</fullName>
            </value>
            <value>
                <fullName>PH Zendesk</fullName>
            </value>
            <value>
                <fullName>SEO Team</fullName>
            </value>
            <value>
                <fullName>PFT</fullName>
            </value>
            <value>
                <fullName>Product Support</fullName>
            </value>
            <value>
                <fullName>Paid Media</fullName>
            </value>
            <value>
                <fullName>Design Consultant Team / Header Image Curation</fullName>
            </value>
            <value>
                <fullName>Data Specialist</fullName>
            </value>
            <value>
                <fullName>IDX Team</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Design Consultant</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Engineering Team</fullName>
            </value>
            <value>
                <fullName>Brand Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>