unpackaged/main/default/objects/Contact/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alaska Time (AK)</fullName>
            </value>
            <value>
                <fullName>Atlantic Standard (AST)</fullName>
            </value>
            <value>
                <fullName>Central Time (CT)</fullName>
            </value>
            <value>
                <fullName>Eastern Time (ET)</fullName>
            </value>
            <value>
                <fullName>Hawaii Standard Time (HST)</fullName>
            </value>
            <value>
                <fullName>Mountain Standard Time (MST)</fullName>
            </value>
            <value>
                <fullName>Mountain Time (MT)</fullName>
            </value>
            <value>
                <fullName>Newfoundland Standard (NDT)</fullName>
            </value>
            <value>
                <fullName>Pacific Time (PT)</fullName>
            </value>
            <value>
                <fullName>Puerto Rico Standard Time (PST)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>