unpackaged/main/default/objects/Contact/fields/Value_sold_score__c.field-meta.xml
<CustomField>
    <fullName>Value_sold_score__c</fullName>
    <label>(MLS) Value sold score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>