unpackaged/main/default/objects/Contact/fields/Website_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Website_Launch_Date__c</fullName>
    <label>Website Launch Date</label>
    <type>Date</type>
</CustomField>