unpackaged/main/default/objects/Contact/fields/What_is_the_client_looking_to_achieve__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_client_looking_to_achieve__c</fullName>
    <label>What is the client looking to achieve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Business Card</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product (Dashboard to make changes)</fullName>
            </value>
            <value>
                <fullName>Generate Leads</fullName>
            </value>
            <value>
                <fullName>Build Cohesive Online Branding</fullName>
            </value>
            <value>
                <fullName>Impress Clients &amp; Position Self as Top-Producing Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>