unpackaged/main/default/objects/Contact/fields/X2024_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>X2024_Event_Name__c</fullName>
    <label>Event Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.9.25 - ICNY25 Registrants</fullName>
            </value>
            <value>
                <fullName>1.23.24 Inman Connect NYC</fullName>
            </value>
            <value>
                <fullName>1.24.24 Side x Side - San Diego</fullName>
            </value>
            <value>
                <fullName>2.4.24 Realty One Summit - Las Vegas</fullName>
            </value>
            <value>
                <fullName>1.22 - 1.26 - The Agency - Pasadena / NYC / Park City</fullName>
            </value>
            <value>
                <fullName>2.9.24 JPAR - TX</fullName>
            </value>
            <value>
                <fullName>2.26.24 Leading RE - LV</fullName>
            </value>
            <value>
                <fullName>2.29.24 Goldbar Live - NYC</fullName>
            </value>
            <value>
                <fullName>2.5 - Top Producer One Summit - LV</fullName>
            </value>
            <value>
                <fullName>3.6 - 3.8 - Tahoe Connect - CA</fullName>
            </value>
            <value>
                <fullName>4.16 - 4.17 - Hannacon - Orlando</fullName>
            </value>
            <value>
                <fullName>Women’s Council of Realtors - Austin</fullName>
            </value>
            <value>
                <fullName>Compass Florida 2024 Events</fullName>
            </value>
            <value>
                <fullName>3.21 Compass Lux Summit - Philly</fullName>
            </value>
            <value>
                <fullName>4.21 - 4.24 - The Gathering - AZ</fullName>
            </value>
            <value>
                <fullName>3.13 - Women of Compass Luncheon</fullName>
            </value>
            <value>
                <fullName>4.22 - 4.24 - T3 Leadership Summit - AZ</fullName>
            </value>
            <value>
                <fullName>5.8 - 5.10 - eXpcon - Toronto</fullName>
            </value>
            <value>
                <fullName>5.21 - 5.22 - Inman Connect - Miami</fullName>
            </value>
            <value>
                <fullName>5.21 - 5.23 - real summit - Banff</fullName>
            </value>
            <value>
                <fullName>6.3 - 6.4 - Agency CO Retreat - Vail</fullName>
            </value>
            <value>
                <fullName>6.18 - 6.19 RE/MAX Lux Forum - Tahoe</fullName>
            </value>
            <value>
                <fullName>6.12. - 6.14 The Agency Leadership Summit - Charlotte</fullName>
            </value>
            <value>
                <fullName>6.25 - 6.26 CIRE Masters - BH</fullName>
            </value>
            <value>
                <fullName>6.20 - 6.21 Serhant Netflix Premiere - NYC</fullName>
            </value>
            <value>
                <fullName>7.30 - 8.1 ICLV - LV</fullName>
            </value>
            <value>
                <fullName>7.17 - GCMastermind - LA</fullName>
            </value>
            <value>
                <fullName>6.12 - 6.14 - Agency Leadership Summit - Charlotte</fullName>
            </value>
            <value>
                <fullName>8.1 - 8.2 - eXp Build 24 - NJ</fullName>
            </value>
            <value>
                <fullName>9.4 - 9.6 - RIS Media CEO/Leadership Exchange - DC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>