unpackaged/main/default/objects/Contact/fields/Xpress_checkout__c.field-meta.xml
<CustomField>
    <fullName>Xpress_checkout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Xpress checkout</label>
    <type>Checkbox</type>
</CustomField>