unpackaged/main/default/objects/Contact/recordTypes/Employees.recordType-meta.xml
<RecordType>
    <fullName>Employees</fullName>
    <active>true</active>
    <description>Luxury Presence Academy Contacts</description>
    <label>Employees</label>
</RecordType>