unpackaged/main/default/objects/Contact/recordTypes/LP_VAs.recordType-meta.xml
<RecordType>
    <fullName>LP_VAs</fullName>
    <active>true</active>
    <label>LP VA&#39;s</label>
</RecordType>