unpackaged/main/default/objects/Contact/validationRules/Contact_without_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_without_Account</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( AccountId )</errorConditionFormula>
    <errorMessage>You cannot create a Contact without an Account.</errorMessage>
</ValidationRule>