unpackaged/main/default/objects/Contact/validationRules/Lost_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(PRIORVALUE(Last_lost_opportunity_date__c))),
ISPICKVAL(Status__c, &quot;Cooling&quot;),
TODAY() - Last_lost_opportunity_date__c &lt; 181,
ISCHANGED(OwnerId),
$Profile.Name &lt;&gt; &quot;Sales Manager&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>You cannot modify the Contact. Please, contact your Salesforce Administrator.</errorMessage>
</ValidationRule>