unpackaged/main/default/objects/Contact/validationRules/Reserve.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserve</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

Reserve__c = TRUE,
 Owner.Reserved_Limit__c  =  Owner.Reserved_Records__c 
)</errorConditionFormula>
    <errorMessage>You have exceeded the amount of Leads you can reserve. Please, uncheck the &quot;Reserve&quot; box or remove a Lead from your reserved Leads.</errorMessage>
</ValidationRule>