unpackaged/main/default/objects/Contact/listViews/Andrew_Stewart_MQLs.listView-meta.xml
<ListView>
    <fullName>Andrew_Stewart_MQLs</fullName>
    <booleanFilter>(1 and 3 and 4) OR (2 and 3 and 4)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LAST_ACTIVITY_DATETIME</columns>
    <columns>LAST_CALL_DATE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paid_Search_Inbound__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Paid_Social_Inbound__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Stewart</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Client</value>
    </filters>
    <label>Andrew Stewart - MQLs</label>
</ListView>