unpackaged/main/default/objects/Contact/listViews/Arman_s_Contacts1.listView-meta.xml
<ListView>
    <fullName>Arman_s_Contacts1</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Arman</value>
    </filters>
    <label>Arman&#39;s Contacts</label>
</ListView>