unpackaged/main/default/objects/Contact/listViews/Copy_of_JP_Test.listView-meta.xml
<ListView>
    <fullName>Copy_of_JP_Test</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_ZIP</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </filters>
    <label>Postal Code Update</label>
</ListView>