unpackaged/main/default/objects/Contact/listViews/Jackie_Dubnicka_Lead_Magnets.listView-meta.xml
<ListView>
    <fullName>Jackie_Dubnicka_Lead_Magnets</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LAST_ACTIVITY_DATETIME</columns>
    <columns>LAST_CALL_DATE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Magnet_Campaign_download__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Jackie</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Client</value>
    </filters>
    <label>Jackie Dubnicka - Lead Magnets</label>
</ListView>