unpackaged/main/default/objects/Contact/listViews/Jackie_Dubnicka_MQLs.listView-meta.xml
<ListView>
    <fullName>Jackie_Dubnicka_MQLs</fullName>
    <booleanFilter>(1 and 4 and 3 and 5)OR (2 and 4 and 3 AND 5)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LAST_ACTIVITY_DATETIME</columns>
    <columns>LAST_CALL_DATE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paid_Search_Inbound__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Paid_Social_Inbound__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Dubnicka</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Jackie</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Client</value>
    </filters>
    <label>Jackie Dubnicka - MQLs</label>
</ListView>